# MesaFX_irix

./: Make-config  README.md
include/GL/: glut.h
src/: Makefile.BeOS  Makefile.irixfx  all.h  mmath.c  mmath.h  texutil.c
src-glut-fx/: glut_fxmesa.c
src/FX/: Makefile.in  fxddtex.c  fxtris.c  fxtritmp.h  libMesaFX_la_SOURCES
src/FX/X86/: Makefile.in
src/GGI/: Makefile.am  Makefile.in
src/GGI/default/: Makefile.in
src/GGI/display/: Makefile.in
src/GGI/include/: Makefile.in
src/GGI/include/ggi/: Makefile.in
src/GGI/include/ggi/mesa/: Makefile.in
src/SPARC/: Makefile.in
src/SVGA/: Makefile.in
src/X/: Makefile.am  Makefile.in
widgets-mesa/include/GL/: MesaDrawingAreaP.h
